# ros2_roboy3_models

./: CMakeLists.txt  LICENSE  README.md  package.xml
arm_right_testbed/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
arm_right_testbed/config/: endeffectors.yaml
config/: control_parameters.yaml  default.rviz  default2.rviz  endeffectors.yaml  link_joint_relation.yaml  motor_config.yaml  roboy3_brain.yaml  rrbot.rviz
head_testbed/: cardsflow.xml  joint_limits.yaml  logfile.txt  model.config  model.sdf  model.urdf
head_testbed/config/: endeffectors.yaml
meshes/CAD/: elbow_left.stl  elbow_right.stl  hand_left.stl  hand_right.stl  head_link1.stl  head_link2.stl  lowerarm_left.stl  lowerarm_right.stl  shoulder_left_link1.stl  shoulder_left_link2.stl  shoulder_right_link1.stl  shoulder_right_link2.stl  upperarm_right.stl  wrist_left_link1.stl  wrist_left_link2.stl  wrist_right_link1.stl  wrist_right_link2.stl
meshes/visuals/: elbow_left.stl  elbow_right.stl  hand_left.stl  hand_right.stl  head.stl  head_link1.stl  head_link2.stl  lowerarm_left.stl  lowerarm_right.stl  upperarm_left.stl  (+9 more)
neck_magentic_field/: cardsflow.xml  logfile.txt  model.config  model.sdf
right_arm/: cardsflow.xml  joint_limits.yaml  logfile.txt  model.config  model.sdf  model.urdf
roboy_ciie/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
upper_body/: cardsflow.xml  logfile.txt  model.sdf  model.urdf
urdf/: joint_limits.yaml  model.config  model.sdf  robody.urdf  robody_old.urdf
wrist_testbed/: cardsflow.xml  logfile.txt  model.config  model.sdf
(+120 files in other folders)
